# neost

./: .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  DEV.md  README.md  TODO.md  imgui.ini  neost.cfg  run.sh  setup.sh
.github/workflows/: deploy-web.yml
carts/: Buggy Boy.img  STE_Test_v1.9.img  cumana OS-9.stc
disks/: Fetiche Maya, Le (1989)(Silmarils)(fr)[cr Replicants].st  Fire and Brimstones (1990)(MicroProse)[cr Replicants][t].st  Flood (1990)(Bullfrog)(M4)[cr Replicants - ST Amigos][t].st  Flying Shark (1988)(Firebird)[h][one disk].st  Lemmings (1990)(Psygnosis)[cr BBC][a].st  MED_001.ST  MED_013A.ST  MED_013B.ST  PP_111.ST  Rick Dangerous (1989)(Core Design - Firebird)[cr TDA][m EMT][t +4].st  Super Hang-On (1988)(Sega)(Disk 1 of 2).st  Super Hang-On (1988)(Sega)(Disk 2 of 2).st  Super Hang-On (1988)(Sega)[cr Replicants].st  diskA.st  rainbow_islands_ocean_software_b.STX  spectrum_512_antic_software.st
disks/demos/: The_Cuddly_demo.msa
disks/etalons/: scroll_8264.st  scroll_8265.st
disks/medway_boys/: MED_108.ST
disks/st/: Arkanoid II - Revenge of Doh (1988)(Imagine)[cr Replicants][t].st  Beyond the Ice Palace.st  Captain Blood (1988)(ERE)(ST)[cr 42-Crew][one disk].st  CarVup (1990)(Core Design)[cr Replicants][t +2].st  Castle Warrior (1989)(Delphine)[cr Number Six].st  Chase HQ (1989)(Ocean)[cr Replicants].st  Cybernoid II (1989)(Hewson)[cr Neil of Cor Blimey][t].st  Dogs of War (1989)(Elite)[cr Mister Gay][t +2].st  Dragon Ninja (1988)(Imagine)[cr Replicants][t].st  Dungeon Master v1.3 (1987)(FTL)(fr)[cr Atarilegend].st  Enchanted Land (1990)(Thalion).st  Epic (1992)(Ocean)(Disk 1 of 2)[cr Elite].st  Epic (1992)(Ocean)(Disk 2 of 2)[cr Elite].st  Extase (1990)(Virgin)[cr Replicants].st  Out Run (1987)(U.S. Gold)[a].st  Pirates (1989)(MicroProse)[cr Delight][m Blue Soft].st  Rick Dangerous II (1989)(Core Design)[cr Empire][t +2][a].st  Stardust (1994)(Daze Marketing Ltd.)(Disk 1 of 3)[cr Hardcore][t].st  Super Hang-On (1988)(Sega).st  Super Sprint (1986)(Electric Dreams)[cr 42-Crew][a].st  Xenon 2 - Megablast (1989)(Image Works).st
disks/stx/: Bubble Ghost - Ère Informatique.stx  Chessmaster 2000 (The) - Electronic Arts (France) (Disk 1 of 2).stx  Chessmaster 2000 (The) - Electronic Arts (France) (Disk 2 of 2).stx  Dungeon_Master_for_Atari_ST_v1.2_(English).stx  Eliminator.stx  GoldenAxe[2Hot2Handle]-D1.stx  GoldenAxe[2Hot2Handle]-D2.stx  Lethal_Xcess_Disk_1.STX  Lethal_Xcess_Disk_2.STX  Magic Pockets.STX  Rick Dangerous - Firebird (UK) (France).stx  ShadowWarriors[2Hot2Handle]-D1.stx  ShadowWarriors[2Hot2Handle]-D2.stx  ShadowWarriors[2Hot2Handle]-D3.stx  Stunt Car Racer.stx  SuperOffRoad[2Hot2Handle]-D1.stx  SuperOffRoad[2Hot2Handle]-D2.stx  TotalRecall[2Hot2Handle]-D1.stx  TotalRecall[2Hot2Handle]-D2.stx  Tower Toppler.stx  Wings_Of_Death_Disk_1.stx  Wings_Of_Death_Disk_2.stx  onslaught.stx  rainbow_islands_ocean_software_a.STX  stardust_bloodhouse_a.STX  stardust_bloodhouse_b.STX  stardust_bloodhouse_c.STX  tower-of-babel.stx
disks/tests/: ovl_lr_default.st  ovl_top.st
disks/utils/: spectrum_512_auto_diapo.st  spectrum_512_st_format.msa
docs/: CYCLE_ACCURACY.md  CYCLE_EXACT_INVENTORY.md  HATARI_AUTOMATION.md  HATARI_GAP_PLAN.md  IKBD_HATARI_DIFF.md  SOUND_HATARI_DIFF.md  TEST_SOFTWARE.md
roms/: etos192fr.img  etos192us.img  etos256fr.img
roms/drivesound/: README.md
src/: JoystickInput.hpp  main.cpp
src/audio/: Audio.cpp  Audio.hpp  DriveSound.cpp  DriveSound.hpp  SampleRing.hpp
src/core/: Blitter.cpp  Blitter.hpp  Bus.cpp  Bus.hpp  Cpu68k.cpp  Cpu68k.hpp  DmaSound.cpp  DmaSound.hpp  Glue.hpp  Machine.cpp  Machine.hpp  MachineType.hpp  Scheduler.hpp  Shifter.cpp  Shifter.hpp  Tracer.cpp  Tracer.hpp  YM2149.cpp  YM2149.hpp
src/headless/: main_headless.cpp
src/io/: Fdc.cpp  Fdc.hpp  Fpu.cpp  Fpu.hpp  Ikbd.cpp  Ikbd.hpp  JoystickInput.hpp  Mfp.cpp  Mfp.hpp  MidiAcia.cpp  MidiAcia.hpp  Rtc.cpp  Rtc.hpp  Scu.hpp  StePads.hpp  StxImage.cpp  StxImage.hpp
src/web/: main_web.cpp
tests/reference/: etos_ste_boot.ppm  overscan_top.ppm  scroll_8264.ppm  scroll_8265.ppm  spectrum512_diapo.ppm
tools/: compare_screenshot.py  etalons.json  fetch_disk.py  fetch_etalons.py  hatari_oracle.sh  make_floppy.py  make_fpu_testrom.py  make_overscan_lr.py  make_overscan_test.py  make_scroll_test.py  run_etalons.py  spec512_flicker_check.sh  trace_diff.py
wasm/: index.data  index.html  index.js  index.wasm
web/: shell.html
